# restonomicon.pl

./: .gitignore  .pre-commit-config.yaml  LICENSE  manage.py  pyproject.toml
myownapp/: api.py  asgi.py  settings.py  wsgi.py
rental/: api_views.py  models.py  pagination.py  serializers.py
rental/migrations/: 0001_initial.py  0002_belonging_owner.py  0003_friend_email.py
